manifests/postgres/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: taskapp
  labels:
    app: postgres
    tier: database
spec:
  clusterIP: None # headless — required for StatefulSet stable DNS (postgres-0.postgres)
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres
